--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-17  Corinna Vinschen  <corinna@vinschen.de>
+
+	* fhandler.cc (fhandler_base::open): Remove 9x specific code.
+
 2004-06-17  Pierre Humblet <pierre.humblet@ieee.org>
  
 	* fhandler.cc (fhandler_base::open_9x): Do not check for null name.
