--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-21  Christopher Faylor  <cgf@alum.bu.edu>
+
+	* autoload.cc (wsock_init): Keep lock while modifying return address.
+
 2004-06-17  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler.cc (fhandler_base::open): Remove 9x specific code.
