--- a/gdb/gdbtk/ChangeLog
+++ b/gdb/gdbtk/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-26  Andrew Cagney  <cagney@gnu.org>
+
+	* generic/gdbtk-hooks.c (gdbtk_add_hooks): Call
+	deprecated_set_gdb_event_hooks.
+
 2004-06-25  Andrew Cagney  <cagney@gnu.org>
 
 	* generic/gdbtk.h: "ui_loop_hook" was deprecated, update.
