* compLoader.cxx (generic_loader):  Add eflags_pin. 	(elf_loader): Add eflags. 	(load_it): Set eflags. 	* elfload.c (readElfFile): Add eflags. 	* sidcpuutil.h (basic_cpu): Add eflags_set_pin, set_eflags. 	* commonCfg.cxx (add_cpu):  Add eflags-set pin.

--- a/sid/component/loader/ChangeLog
+++ b/sid/component/loader/ChangeLog
@@ -1,3 +1,10 @@
+2004-06-29  Stan Cox  <scox@redhat.com>
+
+	* compLoader.cxx (generic_loader):  Add eflags_pin.
+	(elf_loader): Add eflags.
+	(load_it): Set eflags.
+	* elfload.c (readElfFile): Add eflags.
+	
 2004-05-10  Frank Ch. Eigler  <fche@elastic.org>
 
 	* elfload.c (textSectionAddress): Fix declaration placement typo.
