--- a/sid/include/ChangeLog
+++ b/sid/include/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-29  Stan Cox  <scox@redhat.com>
+
+	* sidcpuutil.h (basic_cpu): Add eflags_set_pin, set_eflags.
+	
 2004-03-22  Dave Brolley  <brolley@redhat.com>
 
 	* sidcpuutil.h (trace_pin): New member of basic_cpu.
