--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,26 @@
+2004-06-30  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/stdio.h (__mingw_fseeko64): Add prototype.
+	* mingwex/mingw-fseek.c (__mingw_fseeko64): Add definition.
+	(__mingw_fwrite): Handle huge files.
+
+2004-06-30  Kees Zeelenberg  <kzlg@users.sourceforge.net>
+            Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/stdio.h (fopen64): Add inline function.
+	(fseeko64): Add prototype.
+	(ftello64): Add inline function.
+	* include/io.h (lseek64): Add inline function.
+	* include/sys/types (off64_t): Add typedef.
+	(fpos64_t): Add typedef.
+        * mingwex/fopen64.c: New file.
+        * mingwex/fseeko64.c: New file.
+        * mingwex/ftello64.c: New file.
+        * mingwex/lseek64.c: New file.
+	* mingwex/Makefile.in (STDIO_DISTFILES): Add fopen64.c,
+	fseeko.64.c, ftello64.c, lseek64.c. 
+	(STDIO_OBJS): Add fopen64.o, fseeko.64.o, ftello64.o, lseek64.o.
+
 2004-04-24  Luke Dunstan  <infidel@users.sourceforge.net>
 
 	* include/limits.h (_I64_MIN, _I64_MAX, _UI64_MAX): Add defines.
