--- a/winsup/cygwin/ChangeLog
+++ b/winsup/cygwin/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-30  Corinna Vinschen  <corinna@vinschen.de>
+
+	* times.cc (hires_ms::usecs): Reinit timer when system time overflows.
+
 2004-06-27  Christopher Faylor  <me@cgf.cx>
 
 	* thread.cc (__cygwin_lock_lock): Don't bother locking when there is
