--- a/winsup/mingw/ChangeLog
+++ b/winsup/mingw/ChangeLog
@@ -1,3 +1,10 @@
+2004-07-02 Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* mingwex/Makefile.in (MATH_DISTFILES): Remove pow.c,
+	(MATH_OBJS): Remove pow,o.
+	* include/math.h (pow): Declare with _CRTIMP.
+	Add comment on how to avoid excess precision problems.
+
 2004-06-30  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	* include/stdio.h (__mingw_fseeko64): Add prototype.
