--- a/newlib/ChangeLog
+++ b/newlib/ChangeLog
@@ -1,3 +1,8 @@
+2004-07-06  Chris Demetriou  <cgd@broadcom.com>
+
+	* configure.host (mips*-*-elf*): Default long long printing
+	support.
+
 2004-07-05  Jeff Johnston  <jjohnstn@redhat.com>
 
 	* libc/Makefile.am (libc.dvi): Add target and specify
